# st-android

./: .gitignore  LICENSE  README.md
AndroidVM/app/: CMakeLists.txt  build.gradle
AndroidVM/app/src/androidTest/java/org/squeak/android/test/: ExampleInstrumentedTest.java
AndroidVM/app/src/main/: AndroidManifest.xml
AndroidVM/app/src/main/assets/: android.image.1  android.image.10  android.image.11  android.image.12  android.image.2  android.image.3  android.image.4  android.image.5  android.image.6  android.image.7  android.image.8  android.image.9
AndroidVM/app/src/main/java/org/squeak/android/: MainActivity.java  SqueakVM.java
AndroidVM/app/src/main/jni/: B2DPlugin.c  BitBltPlugin.c  FilePlugin.c  FilePlugin.h  LargeIntegers.c  MiscPrimitivePlugin.c  ZipPlugin.c  interp.c  interp.h  sq.h  sqConfig.h  sqExternalPrims.c  sqFilePluginBasicPrims.c  sqNamedPrims.c  sqNamedPrims.h  sqPlatformSpecific.h  sqUnixSocket.c  sqVirtualMachine.c  sqVirtualMachine.h  squeakvm.c
AndroidVM/app/src/main/res/layout/: activity_main.xml
AndroidVM/app/src/main/res/values/: strings.xml
AndroidVM/gradle/wrapper/: gradle-wrapper.properties
CogDroid/app/: build.gradle
CogDroid/app/src/androidTest/java/org/squeak/android/test/: ExampleInstrumentedTest.java
CogDroid/app/src/main/: AndroidManifest.xml
CogDroid/app/src/main/java/org/smalltalk/android/: VMApplication.java
CogDroid/app/src/main/java/org/smalltalk/android/display/: DisplayView.java  EventHandler.java  SmalltalkActivity.java
CogDroid/app/src/main/java/org/smalltalk/android/vm/: VM.java
CogDroid/app/src/main/java/org/smalltalk/stack/: StackActivity.java  StackEvents.java  StackNetwork.java  StackVM.java  StackView.java
CogDroid/app/src/main/java/org/squeak/android/: MainActivity.java  SqueakInputConnection.java  SqueakVM.java  SqueakView.java
CogDroid/app/src/main/jni/: CMakeLists.txt  directories.cmake
CogDroid/app/src/main/jni/src/vm/: cogit.h  cogitARMv5.c  cogitIA32.c  cogitMIPSEL.c  cogmethod.h  cointerp.c  cointerp.h  gcc3x-cointerp.c  interp.h  vmCallback.h
CogDroid/app/src/main/res/layout/: activity_main.xml  activity_smalltalk.xml
CogDroid/app/src/main/res/values/: strings.xml
CogDroid/app/src/test/java/org/squeak/android/junit/: ExampleUnitTest.java
